--- a/Cart.html
+++ b/Cart.html
@@ -13,7 +13,7 @@
     <nav class="navigator">
         <button class="nav-toggle">☰</button> <!-- Toggle button added -->
         <ul>
-            <li><a href="Home.html" id="website_bold">Home</a></li>
+            <li><a href="index.html" id="website_bold">Home</a></li>
             <li><a href="Contact.html">Contact</a></li>
             <li><a href="#" id="product_bold">Products</a>
                 <ul>
